# spherical_harmonics

./: CMakeLists.txt  Platform.cpp  Platform.h  main.cpp
Math/: Vector.cpp  Vector.h
